tests/fixtures/autonomous/sample-outputs/syntax-error.txt
❌ Task #T005: Implement JWT token service (FAILED)

Error: Unexpected token '}' at src/auth/jwt.ts:45:1

  43 |   return token;
  44 | }
> 45 | }
     | ^
  46 |

SyntaxError: Unexpected token '}'
